Working with client
Changed some types to more proper types.